# Mini-MSG

./: CMakeLists.txt  README.md  loginwindow.qrc  main.cpp
controller/: viewMgt.cpp  viewMgt.h
model/: dataType.h  sqlSentence.h  usrMgt.cpp  usrMgt.h
resources/loginWindow/: loginWindow.css
tools/: tools.cpp  tools.h
view/: loginwindow.cpp  loginwindow.h  loginwindow.ui  resources.h  tools.cpp  viewMgt.cpp  viewMgt.h
view/subWidget/: accountBox.cpp  accountBox.h  accountItem.cpp  accountItem.h
